adicionei mais pontos turisticos, e fotos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <header>
         <h1>Marco Zero do Recife</h1>
         <p>Explore um dos pontos turísticos mais famosos de Recife.</p>
+        <nav>
+            <a href="Recifepontosturisticos.html">Pontos turísticos Recife</a>    
+        </nav>
     </header>
+
 
     
     <main>
