--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title><strong>Marco Zero do Recife</strong></title>
 </head>
 <body>
+    <link rel="stylesheet" href="style.css">
+
     
     <header>
         <h1>Marco Zero do Recife</h1>
